# ProcPlanets

./: CMakeLists.txt  LICENSE  README.md
assets/ocean/: ocean.wgsl
assets/planet/: ocean.wgsl  shader.wgsl  shadows.wgsl
assets/skybox/: shader.wgsl
assets/spaceship/: shader.wgsl
assets/spheres/: shader.wgsl  spheres.mtl
src/: implementations.cpp  main.cpp
src/core/: Engine.cpp  Engine.h  Renderer.cpp  Renderer.h
src/procgen/: ElevationGenerator.hpp  FaceGenerator.hpp  PlanetGenerator.cpp  PlanetGenerator.h
src/resource/: ResourceManager.cpp  ResourceManager.h
src/scenes/: Boat.hpp  Scene.hpp  Spaceship.hpp  Spheres.hpp
